# python-project-174

./: .coverage  Makefile  README.md  coverage.xml  demo.cast  estructura.txt  file2.yml  main.py  note eraser.py  pyproject.toml  requirements.txt  setup.py  test.json
.github/workflows/: python-app.yml
gendiff/: __init__.py  cli.py  diff_builder.py  diff_calculator.py  file_reader.py  generate_diff.py  main.py  parser.py  parsers.py  tree.py  utils.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_gendiff.py
gendiff/tests/fixtures/: expected.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1e7af47e2fa2fbbd_gendiff_py.html  z_4d0ecdd128d30a39___init___py.html  z_4d0ecdd128d30a39_json_py.html  z_4d0ecdd128d30a39_plain_py.html  z_4d0ecdd128d30a39_stylish_py.html  z_df4f92b2916e84df___init___py.html  z_df4f92b2916e84df_diff_builder_py.html  z_df4f92b2916e84df_generate_diff_py.html  z_df4f92b2916e84df_parsers_py.html  z_df4f92b2916e84df_tree_py.html  z_df4f92b2916e84df_utils_py.html
reports/: lcov.info
tests/: file1_expected_output.txt  test_gendiff.py  test_gendiff_cli.py  test_gendiff_yaml.py  test_gendiff_yml.py  test_generate_diff.py
tests/fixtures/: expected.txt  expected_yml.txt  file1.json  file2.json  file2.yml
