[project]
name = "hexlet-code"
version = "1.3"
description = "calculadora de diferencias comparativo archivos json y yml"
authors = [
    {name = "https://github.com/CharlesJRM/python-project-174"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Charles Rodriguez <tu_correo@ejemplo.com>"]

packages = [
  { include = "gendiff" },
]
