[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Calculadora de diferencias comparativo archivos JSON y YML"
authors = ["Charles Rodriguez <tu_correo@ejemplo.com>"]

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = "^7.0.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
