[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Calculadora de diferencias comparativo archivos JSON y YML"
authors = ["Charles Rodriguez <https://github.com/CharlesJRM>"]

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyyaml = "6.0.2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = ">=6.0.0,<7.0.0"
pytest-cov = "^6.2.1"
coverage = "^7.10.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]


